--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">Sarah Bagley, Web Designer + Front-End Developer</h1>
+                <h1 class="title">Sarah Bagley</h1>
                 <nav>
                     <ul>
                         <li><a href="#">about</a></li>
@@ -30,7 +30,7 @@
 
                 <article>
                     <header>
-                        <h1>article section h1</h1>
+                        <h1>Web Designer + Front-End Developer</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
                     </header>
                     <section>
