More text changes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="styles.css">
+        <link href='http://fonts.googleapis.com/css?family=Crushed|Muli|Sacramento' rel='stylesheet' type='text/css'>
 
     </head>
     <body>
@@ -31,7 +32,7 @@
                 <article>
                     <header>
                         <h1>Web Designer</h1>
-                        <p>Here is a site I've designed and built. I believe that good design should not be left solely to Programmers.</p>
+                        <p><a href="http://www.brandyoueconomy.com/" target="_blank">Here</a> is a site I've designed and built. I believe that good design should not be left solely to Programmers.</p>
                     </header>
                     <section>
                         <h2>Front-End Developer</h2>
@@ -43,13 +44,13 @@
                     </section>
                     <footer>
                         <h3>Ways to contact me</h3>
-                        <p>I'm on Twitter, LinkedIn, and most recently, Ello.</p>
+                        <p>I'm on <a href="twitter.com/SarahBWebDesign">Twitter</a>, <a href="http://www.linkedin.com/in/upswingdesign">LinkedIn</a>, and most recently, <a href="https://ello.co/darknessmyoldfriend">Ello</a>.</p>
                     </footer>
                 </article>
 
                 <aside>
-                    <h3>aside</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
+                    <h3>In my spare time</h3>
+                    <p>I enjoy movies, knitting, my puppy, pie-baking, the outdoors, eating, and spending way too much time on social networks.</p>
                 </aside>
 
             </div> <!-- #main -->
@@ -57,7 +58,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>footer</h3>
+                <h3>Yay, here's a footer!</h3>
             </footer>
         </div>
 
