--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </section>
                     <footer>
                         <h3>Ways to contact me</h3>
-                        <p>I'm on <a href="twitter.com/SarahBWebDesign">Twitter</a>, <a href="http://www.linkedin.com/in/upswingdesign">LinkedIn</a>, and most recently, <a href="https://ello.co/darknessmyoldfriend">Ello</a>.</p>
+                        <p>I'm on <a href="http://www.twitter.com/SarahBWebDesign" target="_blank">Twitter</a>, <a href="http://www.linkedin.com/in/upswingdesign" target="_blank">LinkedIn</a>, and most recently, <a href="https://ello.co/darknessmyoldfriend" target="_blank">Ello</a>.</p>
                     </footer>
                 </article>
 
